# coxwave-openai-hackathon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
backend/: .gitignore  pyproject.toml
backend/app/: main.py  server.py  video_agent.py  video_project_state.py
backend/app/integrations/video_generation/providers/: sora.py
backend/app/tools/: video_generations.py
backend/tests/: __init__.py  conftest.py  test_integration.py  test_providers.py  test_service.py  test_types.py  test_video_generations.py
data/: storyboard_example_schema.json
docs/: project_schema.md  storyboard_schema.md  video_model_spec.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatKitPanel.tsx  ClipSelectionPanel.tsx  FinalVideoPanel.tsx  LanguageToggle.tsx  StoryboardPanel.tsx  VideoGenerationPanel.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  PanelLayout.tsx  index.ts
frontend/src/lib/: api.ts  config.ts  exampleStoryboard.ts  i18n.ts  mockData.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
